--- a/_config.yml
+++ b/_config.yml
@@ -64,7 +64,7 @@ blogger_url: # your blogger URL
 work_url: # work page URL
 keybase_username: # your keybase user name
 wikidata_id: # your wikidata id
-dblp_url: # your DBLP profile url
+dblp_url: https://dblp.org/pid/304/7081.html # your DBLP profile url
 
 contact_note: >
   Always open to exploring new ideas over a cup of coffee. 
