--- a/_data/coauthors.yml
+++ b/_data/coauthors.yml
@@ -5,3 +5,8 @@
 "Roy":
   - firstname: ["Sarbani", "S."]
     url: https://scholar.google.co.in/citations?user=vembv2sAAAAJ&view_op=list_works&sortby=pubdate
+
+"Saha":
+  - firstname: ["Pratik", "P."]
+    url: https://scholar.google.com/citations?hl=en&user=ZbI86eAAAAAJ&view_op=list_works&sortby=pubdate
+
