--- a/_config.yml
+++ b/_config.yml
@@ -168,9 +168,9 @@ scholar:
   join_strings: true
   bibtex_filters:
 
-  details_dir: bibliography
-  details_layout: bibtex.html
-  details_link: Details
+  # details_dir: bibliography
+  # details_layout: bibtex.html
+  # details_link: Details
 
   query: "@*"
 
