Made changes to email address

--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ last_name: Nath
 beng_first_name: পৃথ্বীজিৎ
 beng_last_name: নাথ
 
-email: pritthijit.nath.22@imperial.ac.uk
+email: pritthijit.nath22@imperial.ac.uk
 description: > # the ">" symbol means to ignore newlines until "footer_text:"
   Official website of Pritthijit Nath
 footer_text: >
